<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:padding="10dp" >

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_user_name"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edt_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_name"
        android:hint="@string/enter_user_pwd"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edt_real_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_pwd"
        android:hint="@string/enter_user_real_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:visibility="gone" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_real_name"
        android:hint="@string/enter_user_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/confirm_button"
        style="@style/dialog_blue_button"
        android:layout_below="@id/edt_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/dialog_ok" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/confirm_button"
        android:layout_marginRight="10dp"
        android:background="@null"
        android:text="@string/register" />

</RelativeLayout>